# prime_bullet

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  requirements.txt  run_web_gui.sh  setup.py  world_format.yaml
config/: demo.yaml  hsr_sim_base.yaml  test_sim_config.yaml
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  installation.html  objects.inv  overview.html  overview.rst  py-modindex.html  search.html  searchindex.js  tutorial_plugins.html  tutorial_simulator.html  tutorial_simulator.rst
docs/.doctrees/: environment.pickle  index.doctree  installation.doctree  overview.doctree  tutorial_plugins.doctree  tutorial_simulator.doctree
docs/_modules/: iai_bullet_sim.html  index.html  modules.html  (+1 more)
launch/: realtime_simulator.launch  ur5_table_bullet_sim.launch
meshes/: scale.blend  scale_base.dae  scale_plate.dae  suzanne.blend  suzanne.dae  windmill.blend  windmill_base.dae  windmill_head.dae  windmill_wings.dae
msg/: MultiBody.msg  RigidBody.msg
rosinstall/: catkin.rosinstall
scripts/: material_test.py  naive_like_node.py  realtime_simulator.py  simulator_sandbox.py  stack_generation.py  tutorial.py  view_urdf.py
srv/: AddRigidObject.srv  AddURDF.srv  Empty.srv  GetJoints.srv  GetMultibodies.srv  GetObjectIds.srv  GetRigidBodies.srv  GetSimulatorState.srv  GetStaticGeometry.srv  ObjectId.srv  SaveSimulator.srv  SetController.srv  SetGravity.srv  SetJointSensor.srv  SetJointState.srv  SetObjectPose.srv
urdf/: scale.urdf  windmill.urdf
web/: controls.html  controls.js  style.css  templates.js
(+63 files in other folders)
